--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,6 @@ body {
     margin-bottom: 5px;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 1px gray;
-    border: 2px solid black;
+    border: 2px solid gray;
     background-color: rgb(252, 182, 182);
 }
