--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 
 body {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -105,4 +107,15 @@ body {
 #equationOutput {
     display: flex;
     justify-content: end;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-github{
+    margin: 10px;
+    font-size: 30px;
 }
